fix chart with ... for too short chart item, fix modal background

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,12 @@
  *= require_self
  */
 
+ body {
+    transform: scale(1.2);
+    transform-origin: 50% 0%;
+    // add prefixed versions too.
+ }
+
 header {
   width: 100%;
   border-bottom: 1px solid rgb(79,	193,	157)	;
@@ -127,7 +133,7 @@ h1 {
 .modal-background {
    position: fixed;
    top: 0;
-   bottom: 0;
+   bottom: -862px;
    right: 0;
    left: 0;
    background: transparent;
